retrieveOutput/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts__c</fullName>
        <label>Number_of_Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Employees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Number of Employees in the Account</description>
        <inlineHelpText>Total Number of Employees in the Account - HT</inlineHelpText>
        <label>Total Number of Employees</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>